--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "puppeteer-core": "^3.3.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
-    "sequelize": "^5.21.11"
+    "sequelize": "^5.21.11",
+    "sql-injection": "0.0.6",
+    "xss": "^1.0.7"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
